<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.1</version>
        <relativePath/>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.matwein</groupId>
    <artifactId>xmc</artifactId>
    <version>${revision}</version>
	<packaging>pom</packaging>

	<modules>
		<module>xmc.app</module>
		<module>xmc.fe</module>
		<module>xmc.be</module>
		<module>xmc.be.stubs</module>
	</modules>

    <properties>
		<revision>2022.2.1</revision>

        <java.version>17</java.version>
        <start-class>io.github.matwein.xmc.Main</start-class>
		<javafx.platform>current</javafx.platform>

        <openjfx.version>18.0.2</openjfx.version>
        <querydsl.version>5.0.0</querydsl.version>
        <apache.poi.version>5.2.2</apache.poi.version>
    </properties>

	<dependencyManagement>
		<dependencies>
			<!-- XMC -->
			<dependency>
				<groupId>io.github.matwein</groupId>
				<artifactId>xmc.fe</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>io.github.matwein</groupId>
				<artifactId>xmc.be</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>io.github.matwein</groupId>
				<artifactId>xmc.be.stubs</artifactId>
				<version>${revision}</version>
			</dependency>

			<!-- FE / JavaFX -->
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-controls</artifactId>
				<version>${openjfx.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-graphics</artifactId>
				<version>${openjfx.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-fxml</artifactId>
				<version>${openjfx.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-swing</artifactId>
				<version>${openjfx.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jfxtras</groupId>
				<artifactId>jmetro</artifactId>
				<version>11.6.15</version>
				<exclusions>
					<exclusion>
						<artifactId>*</artifactId>
						<groupId>*</groupId>
					</exclusion>
				</exclusions>
			</dependency>

			<!-- Database -->
			<dependency>
				<groupId>com.querydsl</groupId>
				<artifactId>querydsl-jpa</artifactId>
				<version>${querydsl.version}</version>
			</dependency>
			<dependency>
				<groupId>com.querydsl</groupId>
				<artifactId>querydsl-core</artifactId>
				<version>${querydsl.version}</version>
			</dependency>

			<!-- Other -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.12.0</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.11.0</version>
			</dependency>
			<dependency>
				<groupId>com.opencsv</groupId>
				<artifactId>opencsv</artifactId>
				<version>5.6</version>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi</artifactId>
				<version>${apache.poi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>${apache.poi.version}</version>
			</dependency>
			<dependency>
				<groupId>nl.garvelink.oss</groupId>
				<artifactId>iban</artifactId>
				<version>1.12.0</version>
			</dependency>
			<dependency>
				<groupId>io.github.matwein</groupId>
				<artifactId>scalc-core</artifactId>
				<version>2.0.2</version>
			</dependency>
			<dependency>
				<groupId>net.coobird</groupId>
				<artifactId>thumbnailator</artifactId>
				<version>0.4.17</version>
			</dependency>
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>2.9.0</version>
			</dependency>

			<!-- Test / Development -->
			<dependency>
				<groupId>io.github.benas</groupId>
				<artifactId>random-beans</artifactId>
				<version>3.9.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.reflections</groupId>
				<artifactId>reflections</artifactId>
				<version>0.9.12</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>